tests/invalid/type/uninitialized_read.pts
function main() : void {
    int x;
    int y = x + 1;
}
